// SMART relational schema — maps ARCHITECTURE.md §5 plus identity, placement,
// calibration and audit tables required by @smart/contracts.
// Owner: Vishal V (schema + migrations). Domain columns are owned with the
// module that writes them; changing an enum here is a contracts PR.

generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma"
}

datasource db {
  provider = "postgresql"
}

enum UserRole {
  SUPER_ADMIN
  INSTITUTION_ADMIN
  PLACEMENT_STAFF
  STUDENT
  B2B_PARTNER
}

enum AuthProvider {
  PASSWORD
  GOOGLE
  GITHUB
  SAML
  OIDC
}

enum TrackCategory {
  TECH
  MBA
}

enum TrackLaunchStatus {
  DRAFT
  AVAILABLE_NEW
  VALIDATED_LEAD
}

enum CalibrationStatus {
  NOT_CALIBRATED
  PROVISIONAL
  PANEL_CALIBRATED
  RELIABILITY_VERIFIED
}

enum DomainCode {
  A
  B
  C
  D
  E
}

enum LevelFormat {
  MCQ
  SANDBOX
  AUDIO_BARS
  DEFENSE
  CAPSTONE
}

enum ItemType {
  MCQ_SINGLE
  MCQ_MULTI
  NUMERIC_ENTRY
  SHORT_ANSWER
  CODE_TASK
  SQL_TASK
  SCENARIO_RESPONSE
  SPOKEN_RESPONSE
  DEFENSE_PROMPT
  ARTIFACT_UPLOAD
}

enum DifficultyTag {
  EASY
  MEDIUM
  HARD
  EXPERT
}

enum AttemptStatus {
  IN_PROGRESS
  SUBMITTED
  AUTO_SUBMITTED
  EVALUATING
  EVALUATED
  ABANDONED
  VOIDED
}

enum IntegrityFlag {
  CLEAN
  FLAGGED_TIMING
  FLAGGED_PROCTOR
  FLAGGED_SIMILARITY
  FLAGGED_AUDIO
  UNDER_REVIEW
  CLEARED
}

enum Evaluator {
  AUTO_MCQ
  AUTO_NUMERIC
  SANDBOX_CHECK
  CHECKLIST
  LLM_BARS
  HUMAN_RATER
  HYBRID
}

enum Tier {
  GOLD
  SILVER
  BRONZE
  BELOW_BRONZE
}

enum CertifiableTier {
  GOLD
  SILVER
  BRONZE
}

enum CertificateStatus {
  PENDING_ISSUE
  BLOCKED_INTEGRITY
  ISSUED
  SUPERSEDED
  REVOKED
}

enum JdParseStatus {
  PENDING
  PARSED
  FAILED
  MANUALLY_CORRECTED
}

enum PlacementOutcome {
  NOT_SHORTLISTED
  SHORTLISTED
  INTERVIEWED
  OFFERED
  ACCEPTED
  DECLINED
}

enum AiProvider {
  ANTHROPIC
  GOOGLE
  OPENROUTER
}

enum InvitationStatus {
  PENDING
  ACCEPTED
  EXPIRED
  REVOKED
}

enum TenantVerificationStatus {
  PENDING
  APPROVED
  REJECTED
}

enum CompanyMode {
  SERVICE
  PRODUCT
}

enum SkillProficiency {
  BEGINNER
  INTERMEDIATE
  ADVANCED
}

enum SkillClaimStatus {
  DECLARED
  VERIFIED
  BEGINNER_REATTEMPT
  LOCKED
}

enum JobOpeningStatus {
  DRAFT
  OPEN
  CLOSED
}

enum AtsStage {
  APPLIED
  SHORTLISTED
  INTERVIEW
  OFFER
  REJECTED
  WITHDRAWN
}

enum ProjectStatus {
  SUBMITTED
  VERIFIED
  UNDER_REVIEW
  REJECTED
}

enum PlanCode {
  FREE
  BASIC
  PRO
}

model Institution {
  id                   String                   @id @default(uuid()) @db.Uuid
  name                 String
  domain               String                   @unique
  taxonomyDomain       String?                  @map("taxonomy_domain")
  verificationStatus   TenantVerificationStatus @default(APPROVED) @map("verification_status")
  verificationReason   String?                  @map("verification_reason")
  deactivatedAt        DateTime?                @map("deactivated_at") @db.Timestamptz(6)
  heldAt               DateTime?                @map("held_at") @db.Timestamptz(6)
  planId               String                   @map("plan_id") @db.Uuid
  plan                 SubscriptionPlan         @relation(fields: [planId], references: [id])
  createdAt            DateTime                 @default(now()) @map("created_at") @db.Timestamptz(6)

  users                User[]
  batches              Batch[]
  invitations          Invitation[]
  jobDescriptions      JobDescription[]
  jobOpenings          JobOpening[]
  webhooks             WebhookEndpoint[]
  featureFlagOverrides FeatureFlagOverride[]

  @@map("institutions")
}

model Batch {
  id            String   @id @default(uuid()) @db.Uuid
  institutionId String   @map("institution_id") @db.Uuid
  institution   Institution @relation(fields: [institutionId], references: [id], onDelete: Cascade)
  name          String
  code          String?
  createdById   String   @map("created_by_id") @db.Uuid
  createdBy     User     @relation("BatchCreatedBy", fields: [createdById], references: [id])
  createdAt     DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  members     User[]       @relation("BatchMembers")
  invitations Invitation[]

  @@unique([institutionId, name])
  @@index([institutionId])
  @@map("batches")
}

model Invitation {
  id            String           @id @default(uuid()) @db.Uuid
  email         String
  fullName      String           @map("full_name")
  role          UserRole
  institutionId String           @map("institution_id") @db.Uuid
  institution   Institution      @relation(fields: [institutionId], references: [id], onDelete: Cascade)
  batchId       String?          @map("batch_id") @db.Uuid
  batch         Batch?           @relation(fields: [batchId], references: [id], onDelete: SetNull)
  groupLabel    String?          @map("group_label")
  userId        String           @map("user_id") @db.Uuid
  user          User             @relation(fields: [userId], references: [id], onDelete: Cascade)
  tokenHash     String           @unique @map("token_hash")
  status        InvitationStatus @default(PENDING)
  expiresAt     DateTime         @map("expires_at") @db.Timestamptz(6)
  acceptedAt    DateTime?        @map("accepted_at") @db.Timestamptz(6)
  invitedById   String           @map("invited_by_id") @db.Uuid
  invitedBy     User             @relation("InvitationInvitedBy", fields: [invitedById], references: [id])
  lastSentAt    DateTime?        @map("last_sent_at") @db.Timestamptz(6)
  createdAt     DateTime         @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([institutionId, status])
  @@index([batchId])
  @@index([userId])
  @@map("invitations")
}

model User {
  id             String       @id @default(uuid()) @db.Uuid
  email          String       @unique
  fullName       String       @map("full_name")
  passwordHash   String?      @map("password_hash")
  role           UserRole
  provider       AuthProvider @default(PASSWORD)
  emailVerified  Boolean      @default(false) @map("email_verified")
  institutionId  String?      @map("institution_id") @db.Uuid
  institution    Institution? @relation(fields: [institutionId], references: [id])
  batchId        String?      @map("batch_id") @db.Uuid
  batch          Batch?       @relation("BatchMembers", fields: [batchId], references: [id], onDelete: SetNull)
  groupLabel     String?      @map("group_label")
  primaryTrackId String?      @map("primary_track_id") @db.Uuid
  primaryTrack   Track?       @relation("UserPrimaryTrack", fields: [primaryTrackId], references: [id])
  secondaryTrackId String?    @map("secondary_track_id") @db.Uuid
  secondaryTrack Track?       @relation("UserSecondaryTrack", fields: [secondaryTrackId], references: [id])
  heldAt         DateTime?    @map("held_at") @db.Timestamptz(6)
  heldReason     String?      @map("held_reason")
  createdAt      DateTime     @default(now()) @map("created_at") @db.Timestamptz(6)

  refreshTokens       RefreshToken[]
  attempts            Attempt[]
  certificates        Certificate[]
  placements          PlacementRecord[]
  batchesCreated      Batch[]      @relation("BatchCreatedBy")
  invitationsReceived Invitation[]
  invitationsSent     Invitation[] @relation("InvitationInvitedBy")
  companyId           String?      @map("company_id") @db.Uuid
  company             Company?     @relation(fields: [companyId], references: [id])
  skillClaims         SkillClaim[]
  projects            Project[]
  applications        Application[]
  cognitiveProfile    CognitiveProfile?
  communicationProfile CommunicationProfile?
  auditLogs           AuditLog[]
  jobOpeningsCreated  JobOpening[] @relation("JobOpeningCreatedBy")

  @@index([institutionId])
  @@index([batchId])
  @@index([companyId])
  @@map("users")
}

model RefreshToken {
  id        String   @id @default(uuid()) @db.Uuid
  familyId  String   @map("family_id") @db.Uuid
  userId    String   @map("user_id") @db.Uuid
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  tokenHash String   @unique @map("token_hash")
  expiresAt DateTime @map("expires_at") @db.Timestamptz(6)
  revokedAt DateTime? @map("revoked_at") @db.Timestamptz(6)
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([userId, familyId])
  @@map("refresh_tokens")
}

model ApiKey {
  id         String    @id @default(uuid()) @db.Uuid
  name       String
  keyPrefix  String    @map("key_prefix")
  keyHash    String    @unique @map("key_hash")
  role       UserRole  @default(B2B_PARTNER)
  expiresAt  DateTime? @map("expires_at") @db.Timestamptz(6)
  revokedAt  DateTime? @map("revoked_at") @db.Timestamptz(6)
  createdAt  DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)

  @@map("api_keys")
}

model Track {
  id               String             @id @default(uuid()) @db.Uuid
  code             String             @unique
  name             String
  category         TrackCategory
  launchStatus     TrackLaunchStatus  @default(DRAFT) @map("launch_status")
  calibrationStatus CalibrationStatus @default(NOT_CALIBRATED) @map("calibration_status")
  foundationWeight Decimal            @default(0) @map("foundation_weight") @db.Decimal(4, 2)
  capstoneBrief    String             @map("capstone_brief")
  communicationDomain DomainCode      @map("communication_domain")
  createdAt        DateTime           @default(now()) @map("created_at") @db.Timestamptz(6)

  competencies     Competency[]
  levels           Level[]
  primaryUsers     User[]             @relation("UserPrimaryTrack")
  secondaryUsers   User[]             @relation("UserSecondaryTrack")
  certificates     Certificate[]
  jobDescriptions  JobDescription[]
  placements       PlacementRecord[]
  calibrationPanels CalibrationPanel[]

  @@map("tracks")
}

model Competency {
  id              String     @id @default(uuid()) @db.Uuid
  trackId         String     @map("track_id") @db.Uuid
  track           Track      @relation(fields: [trackId], references: [id], onDelete: Cascade)
  domainCode      DomainCode @map("domain_code")
  name            String
  subDomain       String     @map("sub_domain")
  realWorldWeight Decimal    @map("real_world_weight") @db.Decimal(4, 2)
  assessedAtLevels Int[]     @map("assessed_at_levels")
  /// Nullable stub for S1-RM-03 (Ramansh owns writes). Schema steward: Vishal V.
  embedding       Unsupported("vector(1536)")?
  createdAt       DateTime   @default(now()) @map("created_at") @db.Timestamptz(6)

  items Item[]

  @@index([trackId, domainCode])
  @@map("competencies")
}

model Level {
  id              String      @id @default(uuid()) @db.Uuid
  trackId         String      @map("track_id") @db.Uuid
  track           Track       @relation(fields: [trackId], references: [id], onDelete: Cascade)
  levelNumber     Int         @map("level_number")
  name            String
  format          LevelFormat
  durationMinutes Int         @map("duration_minutes")
  itemCount       Int         @default(0) @map("item_count")
  createdAt       DateTime    @default(now()) @map("created_at") @db.Timestamptz(6)

  items       Item[]
  attempts    Attempt[]
  results     LevelResult[]
  cutScores   CutScore[]
  panels      CalibrationPanel[]

  @@unique([trackId, levelNumber])
  @@map("levels")
}

model Item {
  id             String        @id @default(uuid()) @db.Uuid
  levelId        String        @map("level_id") @db.Uuid
  level          Level         @relation(fields: [levelId], references: [id], onDelete: Cascade)
  competencyId   String        @map("competency_id") @db.Uuid
  competency     Competency    @relation(fields: [competencyId], references: [id])
  itemType       ItemType      @map("item_type")
  stem           String
  modelAnswer    Json?         @map("model_answer")
  difficultyTag  DifficultyTag @map("difficulty_tag")
  active         Boolean       @default(true)
  formCode       String        @default("A") @map("form_code")
  exposureCount  Int           @default(0) @map("exposure_count")
  createdAt      DateTime      @default(now()) @map("created_at") @db.Timestamptz(6)

  options   ItemOption[]
  responses Response[]

  @@index([levelId, active, formCode])
  @@map("items")
}

model ItemOption {
  id        String  @id @default(uuid()) @db.Uuid
  itemId    String  @map("item_id") @db.Uuid
  item      Item    @relation(fields: [itemId], references: [id], onDelete: Cascade)
  label     String
  text      String
  isCorrect Boolean @map("is_correct")

  @@map("item_options")
}

model CalibrationPanel {
  id        String   @id @default(uuid()) @db.Uuid
  trackId   String   @map("track_id") @db.Uuid
  track     Track    @relation(fields: [trackId], references: [id])
  levelId   String   @map("level_id") @db.Uuid
  level     Level    @relation(fields: [levelId], references: [id])
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  panelists Panelist[]
  estimates AngoffEstimate[]

  @@map("calibration_panels")
}

model Panelist {
  id         String           @id @default(uuid()) @db.Uuid
  panelId    String           @map("panel_id") @db.Uuid
  panel      CalibrationPanel @relation(fields: [panelId], references: [id], onDelete: Cascade)
  name       String
  roleTitle  String           @map("role_title")
  employer   String

  estimates AngoffEstimate[]

  @@map("panelists")
}

model AngoffEstimate {
  id         String           @id @default(uuid()) @db.Uuid
  panelId    String           @map("panel_id") @db.Uuid
  panel      CalibrationPanel @relation(fields: [panelId], references: [id], onDelete: Cascade)
  panelistId String           @map("panelist_id") @db.Uuid
  panelist   Panelist         @relation(fields: [panelistId], references: [id], onDelete: Cascade)
  tier       CertifiableTier
  estimate   Decimal          @db.Decimal(5, 2)

  @@unique([panelistId, tier])
  @@map("angoff_estimates")
}

model CutScore {
  id        String          @id @default(uuid()) @db.Uuid
  levelId   String          @map("level_id") @db.Uuid
  level     Level           @relation(fields: [levelId], references: [id], onDelete: Cascade)
  tier      CertifiableTier
  mean      Decimal         @db.Decimal(5, 2)
  sd        Decimal         @db.Decimal(5, 2)
  published Boolean         @default(false)
  createdAt DateTime        @default(now()) @map("created_at") @db.Timestamptz(6)

  @@unique([levelId, tier])
  @@map("cut_scores")
}

model Attempt {
  id            String        @id @default(uuid()) @db.Uuid
  userId        String        @map("user_id") @db.Uuid
  user          User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  levelId       String        @map("level_id") @db.Uuid
  level         Level         @relation(fields: [levelId], references: [id])
  formCode      String        @default("A") @map("form_code")
  status        AttemptStatus @default(IN_PROGRESS)
  integrityFlag IntegrityFlag @default(CLEAN) @map("integrity_flag")
  startedAt     DateTime      @default(now()) @map("started_at") @db.Timestamptz(6)
  completedAt   DateTime?     @map("completed_at") @db.Timestamptz(6)
  expiresAt     DateTime      @map("expires_at") @db.Timestamptz(6)

  responses Response[]
  result    LevelResult?
  events    IntegrityEvent[]
  skillVerificationAttempts SkillVerificationAttempt[]

  @@index([userId, status])
  @@map("attempts")
}

model Response {
  id           String     @id @default(uuid()) @db.Uuid
  attemptId    String     @map("attempt_id") @db.Uuid
  attempt      Attempt    @relation(fields: [attemptId], references: [id], onDelete: Cascade)
  itemId       String     @map("item_id") @db.Uuid
  item         Item       @relation(fields: [itemId], references: [id])
  answer       Json?
  score        Decimal?   @db.Decimal(5, 2)
  maxScore     Decimal    @default(100) @map("max_score") @db.Decimal(5, 2)
  evaluatedBy  Evaluator? @map("evaluated_by")
  evaluatedAt  DateTime?  @map("evaluated_at") @db.Timestamptz(6)
  createdAt    DateTime   @default(now()) @map("created_at") @db.Timestamptz(6)

  audits AiEvaluationAudit[]

  @@unique([attemptId, itemId])
  @@map("responses")
}

model LevelResult {
  id              String   @id @default(uuid()) @db.Uuid
  attemptId       String   @unique @map("attempt_id") @db.Uuid
  attempt         Attempt  @relation(fields: [attemptId], references: [id], onDelete: Cascade)
  levelId         String   @map("level_id") @db.Uuid
  level           Level    @relation(fields: [levelId], references: [id])
  rawScore        Decimal  @map("raw_score") @db.Decimal(5, 2)
  tierAwarded     Tier     @map("tier_awarded")
  confidenceBand  String   @map("confidence_band")
  borderline      Boolean  @default(false)
  issuedAt        DateTime @default(now()) @map("issued_at") @db.Timestamptz(6)

  @@map("level_results")
}

model Certificate {
  id                 String            @id @default(uuid()) @db.Uuid
  userId             String            @map("user_id") @db.Uuid
  user               User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  trackId            String            @map("track_id") @db.Uuid
  track              Track             @relation(fields: [trackId], references: [id])
  highestLevelCleared Int              @map("highest_level_cleared")
  headlineTier       CertifiableTier   @map("headline_tier")
  tierTrail          Json              @map("tier_trail")
  status             CertificateStatus @default(PENDING_ISSUE)
  isPublic           Boolean           @default(false) @map("is_public")
  verificationSlug   String            @unique @map("verification_slug")
  issuedAt           DateTime?         @map("issued_at") @db.Timestamptz(6)
  createdAt          DateTime          @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([userId, trackId])
  @@map("certificates")
}

model JobDescription {
  id                String         @id @default(uuid()) @db.Uuid
  institutionId     String         @map("institution_id") @db.Uuid
  institution       Institution    @relation(fields: [institutionId], references: [id])
  trackId           String?        @map("track_id") @db.Uuid
  track             Track?         @relation(fields: [trackId], references: [id])
  companyName       String         @map("company_name")
  roleTitle         String         @map("role_title")
  rawText           String         @map("raw_text")
  status            JdParseStatus  @default(PENDING)
  thresholds        Json?
  parseConfidence   Decimal?       @map("parse_confidence") @db.Decimal(4, 3)
  manuallyCorrected Boolean        @default(false) @map("manually_corrected")
  createdAt         DateTime       @default(now()) @map("created_at") @db.Timestamptz(6)
  parsedAt          DateTime?      @map("parsed_at") @db.Timestamptz(6)

  placements PlacementRecord[]

  @@map("job_descriptions")
}

model PlacementRecord {
  id          String            @id @default(uuid()) @db.Uuid
  userId      String            @map("user_id") @db.Uuid
  user        User              @relation(fields: [userId], references: [id])
  trackId     String            @map("track_id") @db.Uuid
  track       Track             @relation(fields: [trackId], references: [id])
  jdId        String?           @map("jd_id") @db.Uuid
  jd          JobDescription?   @relation(fields: [jdId], references: [id])
  cycle       String
  outcome     PlacementOutcome  @default(NOT_SHORTLISTED)
  companyName String?           @map("company_name")
  packageLpa  Decimal?          @map("package_lpa") @db.Decimal(5, 2)
  createdAt   DateTime          @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([trackId, cycle])
  @@map("placement_records")
}

model IntegrityEvent {
  id        String   @id @default(uuid()) @db.Uuid
  attemptId String   @map("attempt_id") @db.Uuid
  attempt   Attempt  @relation(fields: [attemptId], references: [id], onDelete: Cascade)
  flag      IntegrityFlag
  detail    Json?
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  @@map("integrity_events")
}

model WebhookEndpoint {
  id            String      @id @default(uuid()) @db.Uuid
  institutionId String      @map("institution_id") @db.Uuid
  institution   Institution @relation(fields: [institutionId], references: [id])
  url           String
  secretHash    String      @map("secret_hash")
  events        String[]
  active        Boolean     @default(true)
  createdAt     DateTime    @default(now()) @map("created_at") @db.Timestamptz(6)

  @@map("webhook_endpoints")
}

model AiEvaluationAudit {
  id               String     @id @default(uuid()) @db.Uuid
  responseId       String?    @map("response_id") @db.Uuid
  response         Response?  @relation(fields: [responseId], references: [id])
  promptRef        String     @map("prompt_ref")
  provider         AiProvider
  model            String
  promptTokens     Int        @map("prompt_tokens")
  completionTokens Int        @map("completion_tokens")
  latencyMs        Int        @map("latency_ms")
  usedFallback     Boolean    @default(false) @map("used_fallback")
  estimatedCostUsd Decimal    @map("estimated_cost_usd") @db.Decimal(10, 6)
  createdAt        DateTime   @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([createdAt])
  @@map("ai_evaluation_audits")
}

model RateLimitLog {
  id              String    @id @default(uuid()) @db.Uuid
  identifier      String
  route           String
  policy          String
  violationsCount Int       @default(1) @map("violations_count")
  blockedUntil    DateTime? @map("blocked_until") @db.Timestamptz(6)
  createdAt       DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([identifier, createdAt])
  @@map("rate_limit_logs")
}

model KafkaOutbox {
  id            String    @id @default(uuid()) @db.Uuid
  topic         String
  partitionKey  String    @map("partition_key")
  payload       Json
  source        String
  correlationId String?   @map("correlation_id")
  attempts      Int       @default(0)
  lastError     String?   @map("last_error")
  publishedAt   DateTime? @map("published_at") @db.Timestamptz(6)
  createdAt     DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([publishedAt, createdAt])
  @@map("kafka_outbox")
}

model Company {
  id                   String                   @id @default(uuid()) @db.Uuid
  name                 String
  domain               String                   @unique
  gstin                String?
  website              String?
  linkedinUrl          String?                  @map("linkedin_url")
  sector               String?
  mode                 CompanyMode?
  taxonomyDomain       String?                  @map("taxonomy_domain")
  sizeBand             String?                  @map("size_band")
  location             String?
  verificationStatus   TenantVerificationStatus @default(PENDING) @map("verification_status")
  verificationReason   String?                  @map("verification_reason")
  deactivatedAt        DateTime?                @map("deactivated_at") @db.Timestamptz(6)
  planId               String                   @map("plan_id") @db.Uuid
  plan                 SubscriptionPlan         @relation(fields: [planId], references: [id])
  createdAt            DateTime                 @default(now()) @map("created_at") @db.Timestamptz(6)

  users                User[]
  jobOpenings          JobOpening[]
  featureFlagOverrides FeatureFlagOverride[]

  @@map("companies")
}

model Skill {
  id                      String   @id @default(uuid()) @db.Uuid
  code                    String   @unique
  name                    String
  domain                  String
  cooldownDays            Int      @default(60) @map("cooldown_days")
  validityDays            Int      @default(180) @map("validity_days")
  beginnerPassThreshold   Decimal  @default(60) @map("beginner_pass_threshold") @db.Decimal(5, 2)
  active                  Boolean  @default(true)
  createdAt               DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  claims                  SkillClaim[]
  openingRequirements     JobOpeningSkill[]

  @@index([domain, active])
  @@map("skills")
}

model SkillClaim {
  id             String           @id @default(uuid()) @db.Uuid
  studentId      String           @map("student_id") @db.Uuid
  student        User             @relation(fields: [studentId], references: [id], onDelete: Cascade)
  skillId        String           @map("skill_id") @db.Uuid
  skill          Skill            @relation(fields: [skillId], references: [id])
  proficiency    SkillProficiency
  status         SkillClaimStatus @default(DECLARED)
  strikes        Int              @default(0)
  lockedUntil    DateTime?        @map("locked_until") @db.Timestamptz(6)
  verifiedUntil  DateTime?        @map("verified_until") @db.Timestamptz(6)
  lastAttemptId  String?          @map("last_attempt_id") @db.Uuid
  createdAt      DateTime         @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt      DateTime         @updatedAt @map("updated_at") @db.Timestamptz(6)

  verificationAttempts SkillVerificationAttempt[]

  @@unique([studentId, skillId])
  @@index([status])
  @@map("skill_claims")
}

model SkillVerificationAttempt {
  id                 String     @id @default(uuid()) @db.Uuid
  claimId            String     @map("claim_id") @db.Uuid
  claim              SkillClaim @relation(fields: [claimId], references: [id], onDelete: Cascade)
  assessmentAttemptId String?   @map("assessment_attempt_id") @db.Uuid
  assessmentAttempt  Attempt?   @relation(fields: [assessmentAttemptId], references: [id], onDelete: SetNull)
  claimedProficiency SkillProficiency @map("claimed_proficiency")
  technicalFailure   Boolean    @default(false) @map("technical_failure")
  passed             Boolean?
  explanation        String?
  createdAt          DateTime   @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([claimId, createdAt])
  @@map("skill_verification_attempts")
}

model Project {
  id          String        @id @default(uuid()) @db.Uuid
  studentId   String        @map("student_id") @db.Uuid
  student     User          @relation(fields: [studentId], references: [id], onDelete: Cascade)
  title       String
  problem     String
  approach    String
  stack       String
  outcome     String
  loomUrl     String?       @map("loom_url")
  githubUrl   String?       @map("github_url")
  status      ProjectStatus @default(SUBMITTED)
  createdAt   DateTime      @default(now()) @map("created_at") @db.Timestamptz(6)

  report ProjectVerificationReport?

  @@index([studentId, status])
  @@map("projects")
}

model ProjectVerificationReport {
  id              String   @id @default(uuid()) @db.Uuid
  projectId       String   @unique @map("project_id") @db.Uuid
  project         Project  @relation(fields: [projectId], references: [id], onDelete: Cascade)
  score           Decimal  @db.Decimal(5, 2)
  plagiarismFlag  Boolean  @default(false) @map("plagiarism_flag")
  techAgeFlag     Boolean  @default(false) @map("tech_age_flag")
  relevanceScore  Decimal  @map("relevance_score") @db.Decimal(5, 2)
  explanation     String
  routedToReview  Boolean  @default(false) @map("routed_to_review")
  createdAt       DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  @@map("project_verification_reports")
}

model JobOpening {
  id                 String           @id @default(uuid()) @db.Uuid
  institutionId      String           @map("institution_id") @db.Uuid
  institution        Institution      @relation(fields: [institutionId], references: [id])
  companyId          String?          @map("company_id") @db.Uuid
  company            Company?         @relation(fields: [companyId], references: [id])
  companyName        String           @map("company_name")
  roleTitle          String           @map("role_title")
  domainCode         String?          @map("domain_code")
  minYearsExperience Int?             @map("min_years_experience")
  location           String?
  employmentType     String?          @map("employment_type")
  headcount          Int?
  status             JobOpeningStatus @default(DRAFT)
  createdById        String           @map("created_by_id") @db.Uuid
  createdBy          User             @relation("JobOpeningCreatedBy", fields: [createdById], references: [id])
  createdAt          DateTime         @default(now()) @map("created_at") @db.Timestamptz(6)

  requiredSkills JobOpeningSkill[]
  applications   Application[]

  @@index([institutionId, status])
  @@index([companyId])
  @@map("job_openings")
}

model JobOpeningSkill {
  id              String           @id @default(uuid()) @db.Uuid
  openingId       String           @map("opening_id") @db.Uuid
  opening         JobOpening       @relation(fields: [openingId], references: [id], onDelete: Cascade)
  skillId         String           @map("skill_id") @db.Uuid
  skill           Skill            @relation(fields: [skillId], references: [id])
  minProficiency  SkillProficiency @map("min_proficiency")

  @@unique([openingId, skillId])
  @@map("job_opening_skills")
}

model Application {
  id          String    @id @default(uuid()) @db.Uuid
  openingId   String    @map("opening_id") @db.Uuid
  opening     JobOpening @relation(fields: [openingId], references: [id], onDelete: Cascade)
  studentId   String    @map("student_id") @db.Uuid
  student     User      @relation(fields: [studentId], references: [id], onDelete: Cascade)
  stage       AtsStage  @default(APPLIED)
  matchScore  Decimal?  @map("match_score") @db.Decimal(4, 3)
  createdAt   DateTime  @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt   DateTime  @updatedAt @map("updated_at") @db.Timestamptz(6)

  stageEvents ApplicationStageEvent[]

  @@unique([openingId, studentId])
  @@index([openingId, stage])
  @@index([studentId, stage])
  @@map("applications")
}

model ApplicationStageEvent {
  id            String      @id @default(uuid()) @db.Uuid
  applicationId String      @map("application_id") @db.Uuid
  application   Application @relation(fields: [applicationId], references: [id], onDelete: Cascade)
  fromStage     AtsStage?   @map("from_stage")
  toStage       AtsStage    @map("to_stage")
  createdAt     DateTime    @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([applicationId, createdAt])
  @@map("application_stage_events")
}

model CognitiveProfile {
  id          String   @id @default(uuid()) @db.Uuid
  studentId   String   @unique @map("student_id") @db.Uuid
  student     User     @relation(fields: [studentId], references: [id], onDelete: Cascade)
  narrative   String
  strengths   Json
  weaknesses  Json
  score       Decimal? @db.Decimal(5, 2)
  refreshedAt DateTime @map("refreshed_at") @db.Timestamptz(6)
  createdAt   DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  @@map("cognitive_profiles")
}

model CommunicationProfile {
  id          String   @id @default(uuid()) @db.Uuid
  studentId   String   @unique @map("student_id") @db.Uuid
  student     User     @relation(fields: [studentId], references: [id], onDelete: Cascade)
  narrative   String
  strengths   Json
  weaknesses  Json
  score       Decimal? @db.Decimal(5, 2)
  refreshedAt DateTime @map("refreshed_at") @db.Timestamptz(6)
  createdAt   DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  @@map("communication_profiles")
}

model AuditLog {
  id           String   @id @default(uuid()) @db.Uuid
  actorId      String?  @map("actor_id") @db.Uuid
  actor        User?    @relation(fields: [actorId], references: [id], onDelete: SetNull)
  action       String
  resourceType String   @map("resource_type")
  resourceId   String?  @map("resource_id")
  reasonCode   String?  @map("reason_code")
  metadata     Json?
  createdAt    DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([createdAt])
  @@index([resourceType, resourceId])
  @@index([actorId, createdAt])
  @@map("audit_logs")
}

model SubscriptionPlan {
  id        String   @id @default(uuid()) @db.Uuid
  code      PlanCode @unique
  name      String
  createdAt DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  institutions Institution[]
  companies    Company[]
  entitlements PlanEntitlement[]

  @@map("subscription_plans")
}

model FeatureFlag {
  id          String   @id @default(uuid()) @db.Uuid
  key         String   @unique
  name        String
  description String?
  createdAt   DateTime @default(now()) @map("created_at") @db.Timestamptz(6)

  entitlements PlanEntitlement[]
  overrides    FeatureFlagOverride[]

  @@map("feature_flags")
}

model PlanEntitlement {
  id            String           @id @default(uuid()) @db.Uuid
  planId        String           @map("plan_id") @db.Uuid
  plan          SubscriptionPlan @relation(fields: [planId], references: [id], onDelete: Cascade)
  featureFlagId String           @map("feature_flag_id") @db.Uuid
  featureFlag   FeatureFlag      @relation(fields: [featureFlagId], references: [id], onDelete: Cascade)
  enabled       Boolean          @default(false)

  @@unique([planId, featureFlagId])
  @@map("plan_entitlements")
}

model FeatureFlagOverride {
  id            String       @id @default(uuid()) @db.Uuid
  featureFlagId String       @map("feature_flag_id") @db.Uuid
  featureFlag   FeatureFlag  @relation(fields: [featureFlagId], references: [id], onDelete: Cascade)
  institutionId String?      @map("institution_id") @db.Uuid
  institution   Institution? @relation(fields: [institutionId], references: [id], onDelete: Cascade)
  companyId     String?      @map("company_id") @db.Uuid
  company       Company?     @relation(fields: [companyId], references: [id], onDelete: Cascade)
  enabled       Boolean
  createdAt     DateTime     @default(now()) @map("created_at") @db.Timestamptz(6)

  @@index([institutionId])
  @@index([companyId])
  @@map("feature_flag_overrides")
}
