erDiagram
    INSTITUTION ||--o{ USER : "employs / enrolls"
    INSTITUTION ||--o{ BATCH : "organizes"
    BATCH ||--o{ CANDIDATE : "contains"
    CANDIDATE ||--|| PROFILE : "has"
    PROFILE ||--o{ SKILL_CLAIM : "declares"
    SKILL_CLAIM ||--o{ SKILL_VERIFICATION_ATTEMPT : "generates"
    PROFILE ||--o{ PROJECT : "submits"
    PROJECT ||--|| PROJECT_VERIFICATION_REPORT : "produces"
    PROFILE ||--|| COGNITIVE_PROFILE : "has"
    PROFILE ||--|| COMMUNICATION_PROFILE : "has"
    COMPANY ||--o{ JOB_OPENING : "posts"
    JOB_OPENING ||--o{ APPLICATION : "receives"
    CANDIDATE ||--o{ APPLICATION : "submits"
    APPLICATION ||--|| ATS_STAGE : "tracked_by"
    SKILL_VERIFICATION_ATTEMPT ||--o{ PROCTORING_SESSION : "monitored_by"
    PROCTORING_SESSION ||--|| INTEGRITY_REPORT : "produces"
    INSTITUTION ||--|| SUBSCRIPTION_PLAN : "subscribes_to"
    COMPANY ||--|| SUBSCRIPTION_PLAN : "subscribes_to"
    SUBSCRIPTION_PLAN ||--o{ FEATURE_FLAG : "enables"
    USER ||--o{ AUDIT_LOG : "generates"
